# garando

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
garando_errors/: Cargo.toml
garando_errors/src/: diagnostic.rs  diagnostic_builder.rs  emitter.rs  lib.rs  lock.rs  registry.rs  snippet.rs  styled_buffer.rs
garando_pos/: Cargo.toml
garando_pos/src/: hygiene.rs  lib.rs  symbol.rs
garando_syntax/: Cargo.toml
garando_syntax/src/: abi.rs  ast.rs  attr.rs  codemap.rs  config.rs  diagnostic_list.rs  entry.rs  feature_gate.rs  fold.rs  json.rs  lib.rs  ptr.rs  show_span.rs  std_inject.rs  str.rs  test.rs  test_snippet.rs  tokenstream.rs  visit.rs
garando_syntax/src/diagnostics/: macros.rs  metadata.rs  plugin.rs
garando_syntax/src/ext/: base.rs  build.rs  derive.rs  expand.rs  placeholders.rs  quote.rs  source_util.rs
garando_syntax/src/ext/tt/: macro_parser.rs  macro_rules.rs  quoted.rs  transcribe.rs
garando_syntax/src/parse/: attr.rs  classify.rs  common.rs  mod.rs  obsolete.rs  parser.rs  token.rs
garando_syntax/src/parse/lexer/: comments.rs  mod.rs  tokentrees.rs  unicode_chars.rs
garando_syntax/src/print/: pp.rs  pprust.rs
garando_syntax/src/rustc_data_structures/: blake2b.rs  indexed_vec.rs  leb128.rs  mod.rs  stable_hasher.rs
garando_syntax/src/util/: lev_distance.rs  move_map.rs  node_count.rs  parser.rs  parser_testing.rs  rc_slice.rs  small_vector.rs  thin_vec.rs
syntex_errors/: Cargo.toml
syntex_errors/src/: diagnostic.rs  diagnostic_builder.rs  emitter.rs  lib.rs  lock.rs  snippet.rs  styled_buffer.rs
syntex_pos/: Cargo.toml
syntex_pos/src/: hygiene.rs  lib.rs  symbol.rs
syntex_syntax/: Cargo.toml
syntex_syntax/src/: abi.rs  ast.rs  attr.rs  codemap.rs  config.rs  entry.rs  feature_gate.rs  fold.rs  json.rs  lib.rs  ptr.rs  show_span.rs  std_inject.rs  test.rs  test_snippet.rs  tokenstream.rs  visit.rs
syntex_syntax/src/diagnostics/: macros.rs  metadata.rs  plugin.rs
syntex_syntax/src/ext/: base.rs  build.rs  derive.rs  expand.rs  placeholders.rs  quote.rs  source_util.rs
syntex_syntax/src/ext/tt/: macro_parser.rs  macro_rules.rs  quoted.rs  transcribe.rs
syntex_syntax/src/parse/: attr.rs  classify.rs  common.rs  mod.rs  obsolete.rs  parser.rs  token.rs
syntex_syntax/src/parse/lexer/: comments.rs  mod.rs  tokentrees.rs  unicode_chars.rs
syntex_syntax/src/print/: pp.rs  pprust.rs
syntex_syntax/src/rustc_data_structures/: indexed_vec.rs  leb128.rs  stable_hasher.rs
syntex_syntax/src/util/: lev_distance.rs  move_map.rs  node_count.rs  parser.rs  parser_testing.rs  rc_slice.rs  small_vector.rs  thin_vec.rs
