[package]
name = "garando_errors"
version = "0.59.1" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of librustc_errors"
repository = "https://github.com/serde-rs/garando"
documentation = "https://docs.rs/garando_errors"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
garando_pos = { version = "0.59", path = "../garando_pos" }
term = "0.6"
unicode-xid = "0.2"
