[package]
name = "garando_pos"
version = "0.59.1" # remember to update html_root_url
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax_pos"
repository = "https://github.com/JohnTitor/garando"
documentation = "https://docs.rs/garando_pos"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"
[dependencies]
serde = "1.0"
serde_derive = "1.0"
