[package]
name = "garando_pos"
version = "0.1.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax_pos"
repository = "https://github.com/JohnTitor/garando"
documentation = "https://docs.rs/garando_pos"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
