[package]
name = "garando_syntax2"
version = "0.0.2"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax"
repository = "https://github.com/JohnTitor/garando"
documentation = "https://docs.rs/garando_syntax"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
garando_errors = { version = "0.59", path = "../garando_errors" }
garando_pos = { version = "0.59", path = "../garando_pos" }
unicode-xid = "0.2"
