[package]
name = "syntex_syntax2"
version = "0.0.2" 
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Backport of libsyntax"
repository = "https://github.com/serde-rs/syntex"
documentation = "https://docs.rs/syntex_syntax"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2015"

[dependencies]
bitflags = "0.9"
extprim = { git = "https://github.com/JohnTitor/extprim.git", branch = "llvm-asm" }
log = "0.3"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
syntex_errors = { version = "0.59", path = "../syntex_errors" }
syntex_pos = { version = "0.59", path = "../syntex_pos" }
unicode-xid = "0.1"
